# seatable-scripts-example

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
docs/: README.md
scripts/javascript/: sample.js
scripts/python/: auto_create_seatable_apps.py  sample.py  send_images_to_wechat.py
src/: hello.py
tests/: hello_test.py
